// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`approves comment in rejected queue: count should be 1 1`] = `
<span
  className="Counter-root Counter-colorInherit"
  data-testid="moderate-navigation-reported-count"
>
  <span
    className="Counter-text"
  >
    1
  </span>
</span>
`;

exports[`approves comment in rejected queue: dangling 1`] = `
<div
  className="Card-root ModerateCard-root ModerateCard-dangling"
  data-testid="moderate-comment-card-comment-0"
  id="moderate-comment-comment-0"
  onClick={[Function]}
  tabIndex={0}
>
  <div
    className="Box-root Flex-root Flex-flex"
  >
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <button
            className="BaseButton-root UsernameButton-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span
              className="Username-root"
            >
              Isabelle
            </span>
          </button>
          <button
            className="BaseButton-root Timestamp-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <time
              className="RelativeTime-root Timestamp-text ModerateCard-timestamp"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </button>
          <button
            className="BaseButton-root FeatureButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span>
              Feature
            </span>
          </button>
        </div>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <div
            className="CommentContent-root CommentContent-highlight"
            dangerouslySetInnerHTML={
              Object {
                "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
              }
            }
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <button
            className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconLeft"
            data-variant="text"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
            >
              question_answer
            </i>
            <span>
              View Conversation
            </span>
          </button>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-spacing-3"
        >
          <div
            data-testid="moderate-comment-storyInfo"
          >
            <div
              className="ModerateCard-storyLabel"
            >
              <span>
                Comment On
              </span>
              <span>
                :
              </span>
            </div>
            <div
              className="ModerateCard-commentOn"
            >
              <span
                className="ModerateCard-storyTitle"
              >
                Finally a Cure for Cancer
              </span>
            </div>
            <div>
              <a
                className="TextLink-root ModerateCard-link"
                href="/admin/moderate/stories/story-1"
                onClick={[Function]}
              >
                Moderate Story
              </a>
            </div>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="Box-root Flex-root Flex-flex gutter Flex-spacing-2"
            />
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <span
                className="Marker-root Marker-colorPending Marker-variantRegular"
              >
                Link
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                Banned word
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                Suspect word
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                Spam detected
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                Toxic
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                Repeat comment
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                Recent history
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                <span>
                  Offensive
                </span>
                 
                <span
                  className="Count-root"
                >
                  2
                </span>
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                <span>
                  Spam
                </span>
                 
                <span
                  className="Count-root"
                >
                  3
                </span>
              </span>
              <button
                aria-controls="uuid-0"
                aria-expanded={false}
                className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase"
                data-variant="text"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="Markers-detailsText"
                >
                  Details
                </span>
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
                >
                  arrow_drop_down
                </i>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
    >
      <div
        className="ModerateCard-decision"
      >
        Decision
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
      >
        <button
          aria-label="Reject"
          className="BaseButton-root RejectButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-lg RejectButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 19.5L19.5 4.5"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
              <path
                d="M4.5 4.5L19.5 19.5"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Approve"
          className="BaseButton-root ApproveButton-root ApproveButton-invert"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-lg ApproveButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M23.25.749,8.158,22.308a2.2,2.2,0,0,1-3.569.059L.75,17.249"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders rejected queue with comments 1`] = `
<div
  className="MainLayout-root"
  data-testid="moderate-main-container"
>
  <main
    className="Moderate-main"
  >
    <div
      className="Box-root HorizontalGutter-root Queue-root HorizontalGutter-double"
    >
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-card-comment-0"
        id="moderate-comment-comment-0"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter"
              >
                <button
                  className="BaseButton-root UsernameButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    className="Username-root"
                  >
                    Isabelle
                  </span>
                </button>
                <button
                  className="BaseButton-root Timestamp-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <time
                    className="RelativeTime-root Timestamp-text ModerateCard-timestamp"
                    dateTime="2018-07-06T18:24:00.000Z"
                    title="2018-07-06T18:24:00.000Z"
                  >
                    2018-07-06T18:24:00.000Z
                  </time>
                </button>
                <button
                  className="BaseButton-root FeatureButton-root"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
            </div>
            <div
              className="ModerateCard-contentArea"
            >
              <div
                className="ModerateCard-content"
              >
                <div
                  className="CommentContent-root CommentContent-highlight"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "This is the last random sentence I will be writing and I am going to stop mid-sent",
                    }
                  }
                />
              </div>
              <div
                className="ModerateCard-viewContext"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconLeft"
                  data-variant="text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
                  >
                    question_answer
                  </i>
                  <span>
                    View Conversation
                  </span>
                </button>
              </div>
              <div
                className="ModerateCard-separator ModerateCard-ruledSeparator"
              />
            </div>
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-spacing-3"
              >
                <div
                  data-testid="moderate-comment-storyInfo"
                >
                  <div
                    className="ModerateCard-storyLabel"
                  >
                    <span>
                      Comment On
                    </span>
                    <span>
                      :
                    </span>
                  </div>
                  <div
                    className="ModerateCard-commentOn"
                  >
                    <span
                      className="ModerateCard-storyTitle"
                    >
                      Finally a Cure for Cancer
                    </span>
                  </div>
                  <div>
                    <a
                      className="TextLink-root ModerateCard-link"
                      href="/admin/moderate/stories/story-1"
                      onClick={[Function]}
                    >
                      Moderate Story
                    </a>
                  </div>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-full"
                >
                  <div
                    className="Box-root Flex-root Flex-flex gutter Flex-spacing-2"
                  />
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-full"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                  >
                    <span
                      className="Marker-root Marker-colorPending Marker-variantRegular"
                    >
                      Link
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      Banned word
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      Suspect word
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      Spam detected
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      Toxic
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      Repeat comment
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      Recent history
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      <span>
                        Offensive
                      </span>
                       
                      <span
                        className="Count-root"
                      >
                        2
                      </span>
                    </span>
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      <span>
                        Spam
                      </span>
                       
                      <span
                        className="Count-root"
                      >
                        3
                      </span>
                    </span>
                    <button
                      aria-controls="uuid-0"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase"
                      data-variant="text"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
                      >
                        arrow_drop_down
                      </i>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root RejectButton-invert"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-lg RejectButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.5 19.5L19.5 4.5"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M4.5 4.5L19.5 19.5"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-lg ApproveButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M23.25.749,8.158,22.308a2.2,2.2,0,0,1-3.569.059L.75,17.249"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              className="ModeratedByContainer-moderatedBy"
            >
              Moderated By
            </div>
            <div
              className="ModeratedByContainer-moderatedByUsername"
            >
              System
            </div>
          </div>
        </div>
      </div>
      <div
        className="Card-root ModerateCard-root"
        data-testid="moderate-comment-card-comment-1"
        id="moderate-comment-comment-1"
        onClick={[Function]}
        tabIndex={0}
      >
        <div
          className="Box-root Flex-root Flex-flex"
        >
          <div
            className="ModerateCard-mainContainer"
          >
            <div
              className="ModerateCard-topBar"
            >
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter"
              >
                <button
                  className="BaseButton-root UsernameButton-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    className="Username-root"
                  >
                    Ngoc
                  </span>
                </button>
                <button
                  className="BaseButton-root Timestamp-root"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <time
                    className="RelativeTime-root Timestamp-text ModerateCard-timestamp"
                    dateTime="2018-07-06T18:24:00.000Z"
                    title="2018-07-06T18:24:00.000Z"
                  >
                    2018-07-06T18:24:00.000Z
                  </time>
                </button>
                <button
                  className="BaseButton-root FeatureButton-root"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Feature
                  </span>
                </button>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-alignCenter"
              >
                <span
                  className="SvgIcon-root SvgIcon-sm InReplyTo-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <defs />
                    <title>
                      email-action-reply
                    </title>
                    <path
                      d="M9.709,6.837a1.5,1.5,0,0,0-2.6-1.018L1.648,11.733a1.5,1.5,0,0,0,0,2.034l5.458,5.914a1.5,1.5,0,0,0,2.6-1.018V15.75h6a7.5,7.5,0,0,1,7.5,7.5v-6a7.5,7.5,0,0,0-7.5-7.5h-6Z"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
                <span>
                   
                </span>
                <span
                  className="InReplyTo-inReplyTo"
                >
                  Reply to 
                  <button
                    aria-label="User luke2"
                    className="BaseButton-root InReplyTo-usernameButton"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span
                      className="InReplyTo-username"
                    >
                      luke2
                    </span>
                  </button>
                </span>
              </div>
            </div>
            <div
              className="ModerateCard-contentArea"
            >
              <div
                className="ModerateCard-content"
              >
                <div
                  className="CommentContent-root"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "Don't fool with me",
                    }
                  }
                />
              </div>
              <div
                className="ModerateCard-viewContext"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconLeft"
                  data-variant="text"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <i
                    aria-hidden="true"
                    className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
                  >
                    question_answer
                  </i>
                  <span>
                    View Conversation
                  </span>
                </button>
              </div>
              <div
                className="ModerateCard-separator ModerateCard-ruledSeparator"
              />
            </div>
            <div
              className="ModerateCard-footer"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-spacing-3"
              >
                <div
                  data-testid="moderate-comment-storyInfo"
                >
                  <div
                    className="ModerateCard-storyLabel"
                  >
                    <span>
                      Comment On
                    </span>
                    <span>
                      :
                    </span>
                  </div>
                  <div
                    className="ModerateCard-commentOn"
                  >
                    <span
                      className="ModerateCard-storyTitle"
                    >
                      Finally a Cure for Cancer
                    </span>
                  </div>
                  <div>
                    <a
                      className="TextLink-root ModerateCard-link"
                      href="/admin/moderate/stories/story-1"
                      onClick={[Function]}
                    >
                      Moderate Story
                    </a>
                  </div>
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-full"
                >
                  <div
                    className="Box-root Flex-root Flex-flex gutter Flex-spacing-2"
                  />
                </div>
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-full"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
                  >
                    <span
                      className="Marker-root Marker-colorReported Marker-variantRegular"
                    >
                      <span>
                        Offensive
                      </span>
                       
                      <span
                        className="Count-root"
                      >
                        3
                      </span>
                    </span>
                    <button
                      aria-controls="uuid-1"
                      aria-expanded={false}
                      className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase"
                      data-variant="text"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      type="button"
                    >
                      <span
                        className="Markers-detailsText"
                      >
                        Details
                      </span>
                      <i
                        aria-hidden="true"
                        className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
                      >
                        arrow_drop_down
                      </i>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Box-root Flex-root ModerateCard-aside Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
          >
            <div
              className="ModerateCard-decision"
            >
              Decision
            </div>
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <button
                aria-label="Reject"
                className="BaseButton-root RejectButton-root RejectButton-invert"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-lg RejectButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.5 19.5L19.5 4.5"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                    <path
                      d="M4.5 4.5L19.5 19.5"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Approve"
                className="BaseButton-root ApproveButton-root"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="SvgIcon-root SvgIcon-lg ApproveButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
                >
                  <svg
                    viewBox="-0.25 -0.25 24.5 24.5"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M23.25.749,8.158,22.308a2.2,2.2,0,0,1-3.569.059L.75,17.249"
                      fill="none"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              className="ModeratedByContainer-moderatedBy"
            >
              Moderated By
            </div>
            <div
              className="ModeratedByContainer-moderatedByUsername"
            >
              System
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`renders rejected queue with comments and load more 1`] = `
<div
  className="Card-root ModerateCard-root"
  data-testid="moderate-comment-card-comment-2"
  id="moderate-comment-comment-2"
  onClick={[Function]}
  tabIndex={0}
>
  <div
    className="Box-root Flex-root Flex-flex"
  >
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <div
          className="Box-root Flex-root Flex-flex Flex-alignCenter"
        >
          <button
            className="BaseButton-root UsernameButton-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span
              className="Username-root"
            >
              Max
            </span>
          </button>
          <button
            className="BaseButton-root Timestamp-root"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <time
              className="RelativeTime-root Timestamp-text ModerateCard-timestamp"
              dateTime="2018-07-06T18:24:00.000Z"
              title="2018-07-06T18:24:00.000Z"
            >
              2018-07-06T18:24:00.000Z
            </time>
          </button>
          <button
            className="BaseButton-root FeatureButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <span>
              Feature
            </span>
          </button>
        </div>
      </div>
      <div
        className="ModerateCard-contentArea"
      >
        <div
          className="ModerateCard-content"
        >
          <div
            className="CommentContent-root"
            dangerouslySetInnerHTML={
              Object {
                "__html": "I think I deserve better",
              }
            }
          />
        </div>
        <div
          className="ModerateCard-viewContext"
        >
          <button
            className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconLeft"
            data-variant="text"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
            >
              question_answer
            </i>
            <span>
              View Conversation
            </span>
          </button>
        </div>
        <div
          className="ModerateCard-separator ModerateCard-ruledSeparator"
        />
      </div>
      <div
        className="ModerateCard-footer"
      >
        <div
          className="Box-root HorizontalGutter-root HorizontalGutter-spacing-3"
        >
          <div
            data-testid="moderate-comment-storyInfo"
          >
            <div
              className="ModerateCard-storyLabel"
            >
              <span>
                Comment On
              </span>
              <span>
                :
              </span>
            </div>
            <div
              className="ModerateCard-commentOn"
            >
              <span
                className="ModerateCard-storyTitle"
              >
                Finally a Cure for Cancer
              </span>
            </div>
            <div>
              <a
                className="TextLink-root ModerateCard-link"
                href="/admin/moderate/stories/story-1"
                onClick={[Function]}
              >
                Moderate Story
              </a>
            </div>
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="Box-root Flex-root Flex-flex gutter Flex-spacing-2"
            />
          </div>
          <div
            className="Box-root HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
            >
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                <span>
                  Offensive
                </span>
                 
                <span
                  className="Count-root"
                >
                  1
                </span>
              </span>
              <span
                className="Marker-root Marker-colorReported Marker-variantRegular"
              >
                <span>
                  Spam
                </span>
                 
                <span
                  className="Count-root"
                >
                  1
                </span>
              </span>
              <button
                aria-controls="uuid-2"
                aria-expanded={false}
                className="BaseButton-root Button-root Button-sizeRegular Button-colorMono Button-variantText Button-uppercase"
                data-variant="text"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                <span
                  className="Markers-detailsText"
                >
                  Details
                </span>
                <i
                  aria-hidden="true"
                  className="Icon-root Icon-sm coral coral-icon ButtonIcon-root"
                >
                  arrow_drop_down
                </i>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Box-root Flex-root ModerateCard-aside ModerateCard-asideWithoutReplyTo Flex-flex Flex-itemGutter Flex-alignCenter Flex-directionColumn gutter"
    >
      <div
        className="ModerateCard-decision"
      >
        Decision
      </div>
      <div
        className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
      >
        <button
          aria-label="Reject"
          className="BaseButton-root RejectButton-root RejectButton-invert"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-lg RejectButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 19.5L19.5 4.5"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
              <path
                d="M4.5 4.5L19.5 19.5"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Approve"
          className="BaseButton-root ApproveButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <span
            className="SvgIcon-root SvgIcon-lg ApproveButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
          >
            <svg
              viewBox="-0.25 -0.25 24.5 24.5"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M23.25.749,8.158,22.308a2.2,2.2,0,0,1-3.569.059L.75,17.249"
                fill="none"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="ModeratedByContainer-moderatedBy"
      >
        Moderated By
      </div>
      <div
        className="ModeratedByContainer-moderatedByUsername"
      >
        System
      </div>
    </div>
  </div>
</div>
`;
